<resources>
    <string name="app_name">VRPrelimutensDesktop</string>
    <string name="title_activity_settings">Settings</string>






    <!-- Example General settings -->
    <string name="pref_header_general">General setup</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message history
    </string>

    <string name="pref_title_ip_name">IP Address</string>
    <string name="pref_default_display_name">192.168.43.100</string>
    <string name="pref_title_port_name">Port number</string>
    <string name="pref_port_display_name">9000</string>
    <string name="pref_title_row_count">Rows count</string>
    <string name="pref_default_row_count">2</string>
    <string name="pref_title_paneldistance">Panels distance from origo</string>
    <string name="pref_default_paneldistance">18</string>
    <string name="pref_title_paneldepth">Panel depth scale</string>
    <string name="pref_default_paneldepth">0.01</string>
    <string name="pref_title_panelsize">Panels size</string>
    <string name="pref_default_panelsize">8</string>
    <string name="pref_title_blowsize">Panel blow size</string>
    <string name="pref_default_blowsize">20</string>
    <string name="pref_title_zoomwhenlook">Zoom when look at object</string>

    <string name="pref_stereo_mode">Stereo mode</string>
    <string-array name="pref_stereo_mode_titles">
        <item>Stereo</item>
        <item>Monocular</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Scene preferences</string>

    <string name="pref_title_sync_frequency">Background</string>
    <string-array name="pref_sync_frequency_titles">
        <item>None</item>
        <item>Realtime camera</item>
        <item>Prelimutens theme 1</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
