<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->


    <EditTextPreference
        android:key="scene_row_count"
        android:capitalize="words"
        android:defaultValue="@string/pref_default_row_count"
        android:inputType="number"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_row_count" />
    <EditTextPreference
        android:key="scene_paneldistance"
        android:capitalize="words"
        android:defaultValue="@string/pref_default_paneldistance"
        android:inputType="number"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_paneldistance" />
    <EditTextPreference
        android:key="scene_paneldepthscale"
        android:capitalize="words"
        android:defaultValue="@string/pref_default_paneldepth"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_paneldepth" />
    <EditTextPreference
        android:key="scene_panelsize"
        android:capitalize="words"
        android:defaultValue="@string/pref_default_panelsize"
        android:inputType="number"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_panelsize" />
    <CheckBoxPreference
        android:key="scene_zoomwhenlook"
        android:title="@string/pref_title_zoomwhenlook"
        android:defaultValue="true" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_sync_frequency_titles"
        android:entryValues="@array/pref_sync_frequency_values"
        android:key="scene_background"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_sync_frequency" />

    <!-- This preference simply launches an intent when selected. Use this UI sparingly, per
         design guidelines. -->
    <Preference android:title="@string/pref_title_system_sync_settings">
        <intent android:action="android.settings.SYNC_SETTINGS" />
    </Preference>

</PreferenceScreen>
